updated playbar footer html

--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
             <div
               class="container-fluid border-light border-top border-opacity-25 overflow-auto"
               style="max-height: 55vh"
+              id="comments"
             >
               <div
                 data-bs-spy="scroll"
@@ -314,7 +315,7 @@
           </div>
 
 
-            <div class="col-7" id="main-container">
+            <div class="col-12 col-md-7 p-3" id="main-container">
               <div id="artistPage" class="row row-gap-5">
                 <div class="d-flex justify-content-between align-items-center mb-5">
                     <div id ="switch-icon" class="p-1">
@@ -337,7 +338,7 @@
                     <div class="col-6">
                       <div class="d-flex">
                         <i class="bi bi-check-circle"></i>
-                        <h5 class="text-light">Artista verificato</h5>
+                        <h5 class="text-light" id="artist-badge">Artista verificato</h5>
                       </div>
                       <h1 class="text-light">Artist Name</h1>
                       <h5 class="py-3 text-light">3.433.158 ascoltatori mensili</h5>
@@ -681,23 +682,26 @@
 
     </div>
     
-     <footer class="position-fixed bottom-0 w-100 border-top border-light">
-      <div id="player" class="row align-items-center px-4 py-2">
-        <div id="containerLeft" class="col-4 d-flex flex-row align-items-center">
-          <div>
-            <a class="pe-3" href=""><img width="85px" src="assets/images/avatar.png" alt="" /></a>
+     <footer class="position-fixed bottom-0 w-100 border-top border-light" id="footer">
+      <div id="player" class="row align-items-center bg-dark px-4 py-2 rounded-3 rounded-sm-0">
+        <div id="containerLeft" class="col-11 col-md-4 d-flex flex-row align-items-center justify-content-between justify-content-md-start">
+          <div class="d-flex align-items-center">
+            <div>
+              <a class="pe-3" href=""><img id="song-img" width="85px" src="assets/images/avatar.png" alt="" /></a>
+            </div>
+            <div class="d-flex flex-column">
+              <a class="text-decoration-none text-light" href="">Come As You Are</a>
+              <a class="text-decoration-none text-light" href=""> Nirvana </a>
+            </div>
           </div>
-          <div class="d-flex flex-column">
-            <a class="text-decoration-none text-light" href="">Come As You Are</a>
-            <a class="text-decoration-none text-light" href=""> Nirvana </a>
-          </div>
-          <div class="text-light">
+          <div class="text-light flex-grow-1 d-flex flex-md-grow-0 justify-content-end justify-content-md-center" id="heart-svg">
             <button class="ms-3 me-1 btn bg-transparent text-light fs-3 svg"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-suit-heart-fill" viewBox="0 0 16 16">
               <path d="M4 1c2.21 0 4 1.755 4 3.92C8 2.755 9.79 1 12 1s4 1.755 4 3.92c0 3.263-3.234 4.414-7.608 9.608a.513.513 0 0 1-.784 0C3.234 9.334 0 8.183 0 4.92 0 2.755 1.79 1 4 1z"/>
-            </svg></button>
+            </svg>
+            </button>
           </div>
           <div>
-            <button class="btn bg-transparent text-light">
+            <button class="btn bg-transparent text-light" id="another-svg">
               <svg width="16" height="16" xmlns="http://www.w3.org/2000/svg">
                   <path
                     d="M1 3v9h14V3H1zm0-1h14a1 1 0 0 1 1 1v10a1 1 0 0 1-1 1H1a1 1 0 0 1-1-1V3a1 1 0 0 1 1-1z"
@@ -709,7 +713,7 @@
           </div>
         </div>
 
-        <div id="containerMiddle" class="col-4 text-light d-flex flex-column align-items-center gap-2">
+        <div id="containerMiddle" class="col-1 col-md-4 text-light d-flex flex-column align-items-end align-items-md-center gap-md-2">
           <div id="playerControls" class="d-flex justify-content-center gap-2">
             <button id="shuffle" class="btn bg-transparent text-light">
               <svg
@@ -758,8 +762,8 @@
                   d="M3 1.713a.7.7 0 0 1 1.05-.607l10.89 6.288a.7.7 0 0 1 0 1.212L4.05 14.894A.7.7 0 0 1 3 14.288V1.713z"
                 ></path>
               </svg>
-            </button id="next">
-            <button class="btn bg-transparent text-light">
+            </button>
+            <button class="btn bg-transparent text-light"  id="next"
               <svg
                 role="img"
                 height="16"
@@ -773,8 +777,8 @@
                   d="M12.7 1a.7.7 0 0 0-.7.7v5.15L2.05 1.107A.7.7 0 0 0 1 1.712v12.575a.7.7 0 0 0 1.05.607L12 9.149V14.3a.7.7 0 0 0 .7.7h1.6a.7.7 0 0 0 .7-.7V1.7a.7.7 0 0 0-.7-.7h-1.6z"
                 ></path>
               </svg>
-            </button id="repeat">
-            <button class="btn bg-transparent text-light">
+            </button>
+            <button class="btn bg-transparent text-light" id="repeat">
               <svg
                 role="img"
                 height="16"
@@ -792,20 +796,20 @@
           </div>
           <div id="playbackBar" class="container-fluid d-flex text-light justify-content-center">
             <div class="playback-bar">
-                <div>0:47</div>
+              <div>0:47</div>
+            </div>
+            <div id="playback-progressbar" class="mx-2">
+              <input type="range" min="0" max="300" step="5" />
+              <div id="progress-bar" style="--progress-bar-transform: 20%">
+                <div id="progress-bar-background"></div>
               </div>
-              <div id="playback-progressbar" class="mx-2">
-                <input type="range" min="0" max="300" step="5" />
-                <div id="progress-bar" style="--progress-bar-transform: 20%">
-                  <div id="progress-bar-background"></div>
-                </div>
-              </div>
-            <div>3:38</div>
+            </div>
+            <div id="time">3:38</div>
           </div>
         </div>
 
-        <div id="containerRight" class="col-4 d-flex justify-content-end">
-          <button class="btn bg-transparent text-light">
+        <div id="containerRight" class="col-4 d-none d-md-flex justify-content-end">
+          <button class="btn bg-transparent text-light" id="mic">
             <svg
               role="img"
               height="16"
@@ -820,7 +824,7 @@
               ></path>
             </svg>
           </button>
-          <button class="btn bg-transparent text-light">
+          <button class="btn bg-transparent text-light" id="ddg">
             <svg
               role="img"
               height="16"
@@ -835,7 +839,7 @@
               ></path>
             </svg>
           </button>
-          <button class="btn bg-transparent text-light">
+          <button class="btn bg-transparent text-light" id="speakers">
             <svg
               role="presentation"
               height="16"
@@ -852,7 +856,7 @@
             </svg>
           </button>
           <div id="volume" class="d-flex justify-content-center align-items-center me-0">
-            <button class="btn bg-transparent text-light">
+            <button class="btn bg-transparent text-light" id="volume-icon">
               <svg
                 role="presentation"
                 height="16"
@@ -880,6 +884,7 @@
         </div>
       </div>
     </footer>
+    
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
