--- a/album-page.html
+++ b/album-page.html
@@ -355,7 +355,7 @@
           </div>
           <div class="container-fluid mt-3">
             <div class="row">
-              <div class="card d-flex flex-row bg-transparent ps-0 border-0">
+              <div class="card d-flex flex-column align-items-center flex-md-row bg-transparent ps-0 border-0">
                 <img src="randomimage.jpg" class="card-img-top" alt="..." id="album-img" />
                 <div class="card-body">
                   <p class="card-text text-white mt-3">Album</p>
@@ -396,14 +396,7 @@
                     </span>
                   </span>
                 </button>
-                <!-- <button class="bg-transparent"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-heart" viewBox="0 0 16 16">
-                                                                <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
-                                                              </svg>
-                                                            </button>
-                                                            <button class="bg-transparent"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-download" viewBox="0 0 16 16">
-                                                                <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
-                                                                <path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
-                                                              </svg></button> -->
+
                 <button class="btn btn-transparent">
                   <svg
                     role="img"
