--- a/index.html
+++ b/index.html
@@ -377,8 +377,8 @@
 
 
                    <div class="container-fluid mt-5">
-                    <div class="row">
-                        <div id="popularArtistSongs"class="col-7">
+                    <div class="row flex-column-reverse flex-md-row">
+                        <div id="popularArtistSongs"class="col-12 col-md-7">
                             <h3 class="text-light mb-4">Popolari</h3>
                             <ol class="text-light fw-bold ps-3">
                               <li>
@@ -454,7 +454,7 @@
                             </ol>
                         </div>
                         
-                        <div class="col-5">
+                        <div class="col-12 col-md-5 my-3">
                           <h3 class="text-light mb-3">Brani che ti piacciono</h3>
                           <div class="d-flex align-items-center">
                            <img src="./assets/imgs/main/image-11.jpg" class="mx-2 rounded-circle" width="60" height="60">
@@ -465,7 +465,7 @@
                           </div>    
                         </div> 
                         
-                        <a href="#" class="text-white-50 text-decoration-none">
+                        <a href="#" class="text-white-50 text-decoration-none d-none d-md-flex" id="moreSongs">
                           <h5 class="ms-4">VISUALIZZA ALTRO</h5>
                         </a>
                     </div>
