--- a/album-page.html
+++ b/album-page.html
@@ -430,7 +430,7 @@
                     ></path>
                   </svg>
                 </button>
-                <button class="text-center btn btn-transparent fs-3">...</button>
+                <button class="text-center btn btn-transparent fs-3 text-white">...</button>
               </div>
 
               <div class="container-fluid p-4">
@@ -549,7 +549,7 @@
                   </div>
                 </div>
               </div>
-              <div class="container-fluid mt-4">
+              <div class="container-fluid mt-4" id="discover-more">
                 <div class="row g-1">
                   <div class="col-12 d-flex justify-content-between">
                     <h3 class="text-white">Altro di Artista</h3>
