--- a/album-page.html
+++ b/album-page.html
@@ -787,7 +787,7 @@
         </div>
       </div>
     </div>
-    <footer class="position-fixed bottom-0 w-100 border-top border-light" id="footer">
+    <footer class="position-fixed bottom-0 w-100 border-md-top border-light" id="footer">
       <div id="player" class="row align-items-center bg-dark px-4 py-2 rounded-3 rounded-sm-0">
         <div
           id="containerLeft"
