-fixed play button artist container & cards

--- a/artist-page.html
+++ b/artist-page.html
@@ -349,14 +349,16 @@
               </div>
 
                 <div class="container-fluid mt-5">
-                    <div class="row align-items-center">
-                        <div class="col-1">
+                    <div class="d-flex justify-content-start align-items-center gap-3">
+                        <div>
                           <button data-testid="play-button" aria-label="Play" data-encore-id="buttonPrimary" class="Button-sc-qlcn5g-0 eHhJDl btn btn-success rounded-circle">
-                            <span class="ButtonInner-sc-14ud5tc-0 dpREpp encore-bright-accent-set"><span aria-hidden="true" class="IconWrapper__Wrapper-sc-1hf1hjl-0 fSnHJ"><svg role="img" height="28" width="28" aria-hidden="true" viewBox="0 0 24 24" data-encore-id="icon" class="Svg-sc-ytk21e-0 uPxdw"><path d="m7.05 3.606 13.49 7.788a.7.7 0 0 1 0 1.212L7.05 20.394A.7.7 0 0 1 6 19.788V4.212a.7.7 0 0 1 1.05-.606z"></path></svg></span></span></button>
+                            <span class="ButtonInner-sc-14ud5tc-0 dpREpp encore-bright-accent-set"><span aria-hidden="true" class="IconWrapper__Wrapper-sc-1hf1hjl-0 fSnHJ"><svg role="img" height="40" width="28" aria-hidden="true" viewBox="0 0 24 24" data-encore-id="icon" class="Svg-sc-ytk21e-0 uPxdw"><path d="m7.05 3.606 13.49 7.788a.7.7 0 0 1 0 1.212L7.05 20.394A.7.7 0 0 1 6 19.788V4.212a.7.7 0 0 1 1.05-.606z"></path></svg></span></span></button>
                         </div>
-                        <div class="col-1 d-flex">
+                        <div>
                           <button type="button" class="btn btn-outline-light fw-bold">FOLLOWING</button>
-                          <a href="#" class="ms-3 pt-1">
+                        </div>
+                        <div>
+                          <a href="#">
                             <svg
                               xmlns="http://www.w3.org/2000/svg"
                               width="16"
@@ -381,87 +383,64 @@
                         <div id="popularArtistSongs"class="col-12 col-md-7">
                             <h3 class="text-light mb-4">Popolari</h3>
                             <ol class="text-light fw-bold ps-3">
-                              <li>
-                                <div class="d-flex justify-content-between align-items-center">
-                                  <div class="d-flex me-5">
-                                   <img src="./assets/imgs/main/image-12.jpg" class="mx-3" alt="artistTrack" width="35" height="35">
+                              <li class="d-flex justify-content-start align-items-center gap-5">
+                                  <div class="d-flex align-items-center gap-3">
+                                   <img src="./assets/imgs/main/image-12.jpg" alt="artistTrack" width="35" height="35">
                                    <h5>Ocean Avenue</h5> 
                                   </div>
-                                  <div class="mx-5 px-5">
+                                  <div class="d-flex gap-5">
                                     <p>287.350.179</p>
+                                    <p>3:18</p>
                                   </div>
-                                  <div>
-                                    <p class="mx-5 ps-2">3:18</p>
-                                  </div>
-                                </div>
                               </li>
-                              <li>
-                                <div class="d-flex justify-content-between align-items-center">
-                                  <div class="d-flex me-5">
-                                   <img src="./assets/imgs/main/image-12.jpg" class="mx-3" alt="artistTrack" width="35" height="35">
-                                   <h5>Ocean Avenue</h5> 
-                                  </div>
-                                  <div class="mx-5 px-5">
-                                    <p>287.350.179</p>
-                                  </div>
-                                  <div>
-                                    <p class="mx-5 ps-2">3:18</p>
-                                  </div>
+                              <li class="d-flex justify-content-start align-items-center gap-5">
+                                <div class="d-flex align-items-center gap-3">
+                                 <img src="./assets/imgs/main/image-12.jpg" alt="artistTrack" width="35" height="35">
+                                 <h5>Ocean Avenue</h5> 
                                 </div>
-                              </li>
-                              <li>
-                                <div class="d-flex justify-content-between align-items-center">
-                                  <div class="d-flex me-5">
-                                   <img src="./assets/imgs/main/image-12.jpg" class="mx-3" alt="artistTrack" width="35" height="35">
-                                   <h5>Ocean Avenue</h5> 
-                                  </div>
-                                  <div>
-                                    <p class="mx-5 px-5">287.350.179</p>
-                                  </div>
-                                  <div>
-                                    <p class="mx-5 ps-2">3:18</p>
-                                  </div>
+                                <div class="d-flex gap-5">
+                                  <p>287.350.179</p>
+                                  <p>3:18</p>
                                 </div>
-                              </li>
-                              <li>
-                                <div class="d-flex justify-content-between align-items-center">
-                                  <div class="d-flex me-5">
-                                   <img src="./assets/imgs/main/image-12.jpg" class="mx-3" alt="artistTrack" width="35" height="35">
-                                   <h5>Ocean Avenue</h5> 
-                                  </div>
-                                  <div>
-                                    <p class="mx-5 px-5">287.350.179</p>
-                                  </div>
-                                  <div>
-                                    <p class="mx-5 ps-2">3:18</p>
-                                  </div>
-                                </div>
-                              </li>
-                              <li>
-                                <div class="d-flex justify-content-between align-items-center">
-                                  <div class="d-flex me-5">
-                                   <img src="./assets/imgs/main/image-12.jpg" class="mx-3" alt="artistTrack" width="35" height="35">
-                                   <h5>Ocean Avenue</h5> 
-                                  </div>
-                                  <div>
-                                    <p class="mx-5 px-5">287.350.179</p>
-                                  </div>
-                                  <div>
-                                    <p class="mx-5 ps-2">3:18</p>
-                                  </div>
-                                </div>
-                              </li>
+                            </li>
+                            <li class="d-flex justify-content-start align-items-center gap-5">
+                              <div class="d-flex align-items-center gap-3">
+                               <img src="./assets/imgs/main/image-12.jpg" alt="artistTrack" width="35" height="35">
+                               <h5>Ocean Avenue</h5> 
+                              </div>
+                              <div class="d-flex gap-5">
+                                <p>287.350.179</p>
+                                <p>3:18</p>
+                              </div>
+                          </li>
+                          <li class="d-flex justify-content-start align-items-center gap-5">
+                            <div class="d-flex align-items-center gap-3">
+                             <img src="./assets/imgs/main/image-12.jpg" alt="artistTrack" width="35" height="35">
+                             <h5>Ocean Avenue</h5> 
+                            </div>
+                            <div class="d-flex gap-5">
+                              <p>287.350.179</p>
+                              <p>3:18</p>
+                            </div>
+                        </li>
+                        <li class="d-flex justify-content-start align-items-center gap-5">
+                          <div class="d-flex align-items-center gap-3">
+                           <img src="./assets/imgs/main/image-12.jpg" alt="artistTrack" width="35" height="35">
+                           <h5>Ocean Avenue</h5> 
+                          </div>
+                          <div class="d-flex gap-5">
+                            <p>287.350.179</p>
+                            <p>3:18</p>
+                          </div>
+                      </li>
                             </ol>
                         </div>
                         
-                        <div class="col-12 col-md-5 my-3">
-                          <h3 class="text-light mb-3">Brani che ti piacciono</h3>
-                          <div class="d-flex align-items-center">
-                           <img src="./assets/imgs/main/image-11.jpg" class="mx-2 rounded-circle" width="60" height="60">
-                           <div>
-                            <span class="my-2 text-light fw-bold">Hai messo Mi piace a 11 brani</span>
-                            <p class="text-light">di Imagine Dragons</p>
-                           </div>
+                        <div class="col-12 col-md-5">
+                          <h3 class="text-light">Brani che ti piacciono</h3>
+                          <div class="d-flex justify-content-evenly align-items-center">
+                           <img src="./assets/imgs/main/image-11.jpg" class="rounded-circle" width="60" height="60">
+                           <p class="text-light"><span class="text-light fw-bold">Hai messo Mi piace a 11 brani</span><br>di Imagine Dragons</p>
                           </div>    
                         </div> 
                         
@@ -479,7 +458,7 @@
                             <a href="#" style="text-decoration: none;"><p class="text-secondary fw-semibold">VISUALIZZA TUTTO</p></a>
                         </div>
                         <div class="col-2 me-4">
-                            <div class="card bg-dark p-1" style="width:10rem;min-height:280px; max-height: 280px;">
+                            <div class="card bg-dark p-1" style="min-height:280px; max-height: 280px;">
                                 <img src="randomimage.jpg" class="card-img-top" height="150px" alt="...">
                                 <div class="card-body">
                                   <h5 class="card-title text-white fs-6">Hot Hits Italia</h5>
@@ -488,7 +467,7 @@
                               </div>
                         </div>
                         <div class="col-2 me-4">
-                            <div class="card bg-dark p-1 carte " style="width:10rem;min-height:280px;max-height: 280px;">
+                            <div class="card bg-dark p-1" style="min-height:280px;max-height: 280px;">
                                 <img src="randomimage.jpg" class="card-img-top" height="150px" alt="...">
                                 <div class="card-body">
                                   <h5 class="card-title text-white fs-6">big on the internet</h5>
@@ -497,7 +476,7 @@
                               </div>
                         </div>
                         <div class="col-2 me-4">
-                            <div class="card bg-dark p-1" style="width:10rem ;min-height:280px;max-height: 280px;">
+                            <div class="card bg-dark p-1" style="min-height:280px;max-height: 280px;">
                                 <img src="randomimage.jpg" class="card-img-top" height="150px" alt="...">
                                 <div class="card-body">
                                   <h5 class="card-title text-white fs-6">Pop Rising</h5>
@@ -506,7 +485,7 @@
                               </div>
                         </div>
                         <div class="col-2 me-4">
-                            <div class="card bg-dark p-1" style="width:10rem ;min-height:280px;max-height: 280px;">
+                            <div class="card bg-dark p-1" style="min-height:280px;max-height: 280px;">
                                 <img src="randomimage.jpg" class="card-img-top" height="150px" alt="...">
                                 <div class="card-body">
                                   <h5 class="card-title text-white fs-6">Canzoni tristi</h5>
@@ -515,7 +494,7 @@
                               </div>
                         </div>
                         <div class="col-2">
-                            <div class="card bg-dark p-1 " style="width:10rem ;min-height:280px;max-height: 280px;">
+                            <div class="card bg-dark p-1 " style="min-height:280px;max-height: 280px;">
                                 <img src="randomimage.jpg" class="card-img-top" height="150px" alt="...">
                                 <div class="card-body">
                                   <h5 class="card-title text-white fs-6">Tendenze</h5>
@@ -534,7 +513,7 @@
                             <a href="#" style="text-decoration: none;"><p class="text-secondary fw-semibold">VISUALIZZA TUTTO</p></a>
                         </div>
                         <div class="col-2 me-4">
-                            <div class="card bg-dark p-1" style="width:10rem;min-height:280px; max-height: 280px;">
+                            <div class="card bg-dark p-1" style="min-height:280px; max-height: 280px;">
                                 <img src="randomimage.jpg" class="card-img-top" height="150px" alt="...">
                                 <div class="card-body">
                                   <h5 class="card-title text-white fs-6">Hot Hits Italia</h5>
@@ -543,7 +522,7 @@
                               </div>
                         </div>
                         <div class="col-2 me-4">
-                            <div class="card bg-dark p-1 carte " style="width:10rem;min-height:280px;max-height: 280px;">
+                            <div class="card bg-dark p-1 carte " style="min-height:280px;max-height: 280px;">
                                 <img src="randomimage.jpg" class="card-img-top" height="150px" alt="...">
                                 <div class="card-body">
                                   <h5 class="card-title text-white fs-6">big on the internet</h5>
@@ -552,7 +531,7 @@
                               </div>
                         </div>
                         <div class="col-2 me-4">
-                            <div class="card bg-dark p-1" style="width:10rem ;min-height:280px;max-height: 280px;">
+                            <div class="card bg-dark p-1" style="min-height:280px;max-height: 280px;">
                                 <img src="randomimage.jpg" class="card-img-top" height="150px" alt="...">
                                 <div class="card-body">
                                   <h5 class="card-title text-white fs-6">Pop Rising</h5>
@@ -561,7 +540,7 @@
                               </div>
                         </div>
                         <div class="col-2 me-4">
-                            <div class="card bg-dark p-1" style="width:10rem ;min-height:280px;max-height: 280px;">
+                            <div class="card bg-dark p-1" style="min-height:280px;max-height: 280px;">
                                 <img src="randomimage.jpg" class="card-img-top" height="150px" alt="...">
                                 <div class="card-body">
                                   <h5 class="card-title text-white fs-6">Canzoni tristi</h5>
@@ -570,7 +549,7 @@
                               </div>
                         </div>
                         <div class="col-2">
-                            <div class="card bg-dark p-1 " style="width:10rem ;min-height:280px;max-height: 280px;">
+                            <div class="card bg-dark p-1 " style="min-height:280px;max-height: 280px;">
                                 <img src="randomimage.jpg" class="card-img-top" height="150px" alt="...">
                                 <div class="card-body">
                                   <h5 class="card-title text-white fs-6">Tendenze</h5>
