--- a/artist-page.html
+++ b/artist-page.html
@@ -432,13 +432,13 @@
                             <p>287.350.179</p>
                             <p>3:18</p>
                           </div>
-                      </li>
-                            </ol>
+                        </li>
+                      </ol>
                         </div>
                         
                         <div class="col-12 col-md-5">
                           <h3 class="text-light">Brani che ti piacciono</h3>
-                          <div class="d-flex justify-content-evenly align-items-center">
+                          <div class="d-flex justify-content-start gap-3 align-items-center">
                            <img src="./assets/imgs/main/image-11.jpg" class="rounded-circle" width="60" height="60">
                            <p class="text-light"><span class="text-light fw-bold">Hai messo Mi piace a 11 brani</span><br>di Imagine Dragons</p>
                           </div>    
